<resources>
    <string name="action_settings">Settings</string>
    <string name="shuwo">书窝</string>
    <string name="waitford">"正在发布中……"</string>
    <string name="waitforl">"正在加载中……"</string>
    <string name="connection">"请链接网络"</string>
    <string name="chooseway">请选择方式：</string>
    <string name="chooseprice">请选择价格：</string>
    <string name="choosekind">书类：</string>
    <string name="app_name">书窝</string>
    <string name="main_rank">积分排行</string>
    <string name="main_charity">活动公告</string>
    <string name="book_buy">买卖</string>
    <string name="book_borrow">租借</string>
    <string name="book_exchange">互换</string>
    <string name="home">首页</string>
    <string name="deal">交易</string>
    <string name="love">爱心</string>
    <string name="user">个人</string>
    <string name="main_charity_piao">图书漂流活动:</string>
    <string name="main_charity_people">活动对象:</string>
    <string name="main_charity_time">活动时间:</string>
    <string name="main_charity_form">活动形式:</string>
    <string name="main_charity_award">活动奖励:</string>
    <string name="main_charity_join">报名方式:</string>
    <string name="main_charity_phone">联系方式:</string>
    <string name="deal_search">查询</string>
    <string name="deal_bill">订单</string>
    <string name="deal_cart">购物车</string>
    <string name="deal_collect">收藏</string>
    <string name="deal_add">加入购物车</string>
    <string name="deal_pay">结账</string>
    <string name="deal_book_name">书名：</string>
    <string name="deal_book_way">方式：</string>
    <string name="deal_relase">卖书</string>
    <string name="deal_buy">买书</string>
    <string name="deal_borrow">借书</string>
    <string name="deal_exchange">换书</string>
    <string name="deal_book_detial">详细信息</string>
    <string name="deal_bill_name">收件人</string>
    <string name="deal_bill_adress">收件地址</string>
    <string name="deal_bill_phone">联系电话</string>
    <string name="deal_bill_note">备注</string>
    <string name="deal_bill_total">总计:￥</string>
    <string name="deal_bill_back">返回购物车</string>
    <string name="delete">是否删除？</string>
    <string name="del">删除？</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="deleted">你已删除</string>
    <string name="donate_donate_declare">捐书发布</string>
    <string name="donate_need_declare">求书发布</string>
    <string name="donate_donate">捐书公告</string>
    <string name="donate_need">求书公告</string>
    <string name="donate_need_name">求书者</string>
    <string name="donate_need_school">所在学校:</string>
    <string name="declare">发布</string>
    <string name="upload">上传</string>
    <string name="deadline">截止时间:</string>
    <string name="donate_need_reason">求书原因:</string>
    <string name="donate_need_book">所需书籍:</string>
    <string name="donate_give_name">捐书者</string>
    <string name="slow">你慢了一步，此书已有主！</string>
    <string name="donate_give_book">捐赠书籍:</string>
    <string name="declareBook">发布书</string>
    <string name="dealBook">交易</string>
    <string name="giveBook">捐书</string>
    <string name="needBook">求书</string>
    <string name="deal_sale">卖书发布</string>
    <string name="deal_sale_name">卖书者</string>
    <string name="deal_sale_book">书名</string>
    <string name="deal_sale_auther">作者</string>
    <string name="deal_sale_publisher">出版社</string>
    <string name="deal_sale_way">方式</string>
    <string name="user_tip">提醒</string>
    <string name="user_record">记录</string>
    <string name="user_wallet">钱包</string>
    <string name="user_wallet_change">更改账户</string>
    <string name="user_score">积分</string>
    <string name="user_tip_borrow">租出提醒</string>
    <string name="user_tip_sale">卖出提醒</string>
    <string name="user_tip_exchange">换书提醒</string>
    <string name="user_tip_donate">捐出提醒</string>
    <string name="user_tip_need">受助提醒</string>
    <string name="user_tip_charity">活动提醒</string>
    <string-array name="tip">
        <item>@string/user_tip_borrow</item>
        <item>@string/user_tip_sale</item>
        <item>@string/user_tip_exchange</item>
        <item>@string/user_tip_donate</item>
        <item>@string/user_tip_need</item>
        <item>@string/user_tip_charity</item>
    </string-array>
    <string name="add_photo">添加图片</string>
    <string name="user_tip_sign">签到</string>
    <string name="user_tip_signed">今天已经签到</string>
    <string name="user_wallet_acount">账户</string>
    <string name="set">设置</string>
    <string name="set_nickname">昵称</string>
    <string name="set_name">姓名</string>
    <string name="set_school">学校</string>
    <string name="set_phone">手机</string>
    <string name="set_mail">邮箱</string>
    <string name="set_school0">学院</string>
    <string name="set_major">手机</string>
    <string name="set_id">学号</string>
    <string name="information">个人资料</string>
    <string name="set_protocol">协议</string>
    <string name="set_photo">身份证明照</string>
    <string name="takephoto">拍照</string>
    <string name="choosepic">请选择图片</string>
    <string name="choose">你选择了</string>
    <string name="set_out">退出当前账号</string>
    <string name="set_icon">头像</string>
    <string name="set_save">保存</string>
    <string name="login_user">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_remember">记住密码</string>
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_land">登录</string>
    <string name="out">退出</string>
    <string name="user_wallet_left">余额</string>
    <string name="user_tip_days">已签到天数：</string>
    <string name="title_activity_forget">找回密码</string>
    <string name="deal_cart_order">下订单</string>
    <string name="title_activity_set_agreement">SetAgreement</string>
    <string name="agreetitle">书窝APP使用协议</string>
    <string name="agreedetail">" 用户使用须知
本平台秉着公益性原则服务，但在使用APP中需要注意以下几点：
(1)服务方式：用户可以根据自己的需求选取合适的方式，获取所需的二手书，体现了二手书获取的灵活性。由于每个人的情况不同，所以平台只提供信息交易服务，不提供快递服务，前期可能需要用户进行私下的快递交易，但后期会联系大学城内公益组织，定期收集二手书并运输到指定学校。
买卖：二手书卖给别人，类似淘宝的操作，书到后确认付款。
租借：二手书租借给别人，租书者支付一定的押金和租金，租出者把书给租书者后获得租金，租书者归还书籍后，系统归还押金。租书区别于图书馆的是，它的租借时间是半年为一个期限定价，即提供更长的租借时间以满足需求。
互换：跟他人互换发布者预设好的图书。互换书的双方，通过将书送到书籍收集点，公益组织会将书籍派发到固定的高校，互换书籍的双方去领取。互换的期限可以是永久也可以是半年左右。

(2)价格规定：由于我们依赖的Bmob服务后台在功能上并不是完全免费的，基于运营需要，服务平台需要收取用户8%%的盈利，以5%%支付Bmob支付功能服务费，2%%补贴公益组织传递二手书，1%%维持服务平台的基本运营。
a.二手书的买卖价格不得高于原价，如需快递运输需要说明价格，保证价格合理。如在买卖过程中一方没能遵守规定，及时发货，经留言箱投诉证实后，会被减积分或者被拉入黑名单。
b.原价在10—50元以内的书籍租借金额，不能够超过十五元/半年；原价在50以上元以内的书籍租借金额，半年不能够超过三十元；押金和租金价格相同，且租金价格不可超过原价一半，租书限期一到，需及时还回对方租借书籍，否则经投诉查实后会被拉入黑名单。
c.互换书籍过程中要了解清楚书籍是否是自己所需，如果是永久互换，需在你情我愿的情况下，差价最好最好不要太大。如果有一方未能按要求互换，书籍将按租借书籍处理。
d.使用本平台二手书信息，获取帮助的人需将平台分享到QQ空间、微信朋友圈等，帮助平台推广，支持我们这个服务平台继续进行。
e.在发布交易书籍或捐赠求书时，务必填写正确信息，以便需要的用户能够及时找到。
f.由于服务平台刚刚起步，不太成熟，一开始在联系公益组织作上有些许困难，书籍运输上可能需要以快递的方式完成，后期获得公益组织帮助后会完善书籍传递的流程。

(3)积分原则：
a.通过每日签到获得，每天1积分。
b.通过捐赠书籍获取积分，每次捐赠书籍获取5分。
c.参与一些与本平台合作的公益组织举办的公益活动，会获得一定积分。
d.积分不可以通过购买获得，积分使用，积分不可以卖给他人使用，只能归本人，积分作为评价用户信用和素质的一种方式。
咨询邮箱：1653768234@qq.com
广州中医药大学书窝团队
        2016-03-05"</string>
    <string name="result_ok">操作成功！</string>
    <string name="result_no">操作失败！</string>
    <string name="login_ok">登录成功！</string>
    <string name="login_no">登录失败！</string>
</resources>
