<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView00"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon" />


    <EditText
        android:id="@+id/ed_login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circlew"
        android:ems="16"
        android:hint="邮箱"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/ed_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circlew"
        android:ems="16"
        android:hint="密码"
        android:inputType="number|numberPassword"
        android:padding="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_land"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/circleb"
        android:padding="4dp"
        android:text="@string/login_land"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_remember"
            android:textColor="@color/t0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_forget"
            android:textColor="@color/t0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_register"
            android:textColor="@color/t0"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>

