<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/g"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/w"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/im_search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/search" />

        <LinearLayout
            android:id="@+id/classity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="分类"
                android:textColor="@color/t0"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/down1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/deal_cart"
            android:textColor="@color/t0"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_bill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deal_bill"
            android:textColor="@color/t0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_declare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/declare"
            android:textColor="@color/t0"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000"
        android:dividerHeight="8dp" />

    <include
        layout="@layout/load_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

