<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shuwoapp.home.HomeBill">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deal_bill_name"
                    android:textColor="@color/t0"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ed_receiver"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deal_bill_adress"
                    android:textColor="@color/t0"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ed_adress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deal_bill_phone"
                    android:textColor="@color/t0"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deal_bill_note"
                    android:textColor="@color/t0"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ed_note"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_bill_total"
                android:textColor="@color/t0"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_bill_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/t0"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_bill_back"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="2"
                android:background="@drawable/bt_black_d"
                android:text="@string/deal_bill_back"
                android:textColor="@color/w"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_pay"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/bt_black_d"
                android:text="@string/deal_pay"
                android:textColor="@color/w"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

