<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="64dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/im_cart"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_book_name"
                android:textColor="@color/t0"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_cart_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/t0"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_book_way"
                android:textColor="@color/t0"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_cart_way"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/t0"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
