<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bt_white_d"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_need_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_need_book"
            android:textColor="@color/t0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_need_book"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/t0"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_need_school"
            android:textColor="@color/t0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_need_school"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/t0" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:textColor="@color/t0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_need_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/t0"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_need_reason"
            android:textColor="@color/t0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_need_reason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/t0"
            android:textSize="16sp" />
    </TableRow>
</LinearLayout>
